// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectStatsFilters /> should render 3 filters 1`] = `
<Row
  bsClass="row"
  className="stats__filters"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={4}
    xs={12}
  >
    <InjectIntl(ReactBootstrapInput)
      id="stats-filter-themes"
      onChange={[Function]}
      type="select"
    >
      <option
        value=""
      >
        global.select_themes
      </option>
      <option
        key="1"
        value={1}
      >
        theme-1
      </option>
    </InjectIntl(ReactBootstrapInput)>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={4}
    xs={12}
  >
    <InjectIntl(ReactBootstrapInput)
      id="stats-filter-categories"
      onChange={[Function]}
      type="select"
    >
      <option
        value=""
      >
        global.select_categories
      </option>
      <option
        key="1"
        value={1}
      />
    </InjectIntl(ReactBootstrapInput)>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={4}
    xs={12}
  >
    <InjectIntl(ReactBootstrapInput)
      id="stats-filter-districts"
      onChange={[Function]}
      type="select"
    >
      <option
        value=""
      >
        <FormattedMessage
          id="global.select_districts"
          values={Object {}}
        />
      </option>
      <option
        key="1"
        value={1}
      />
    </InjectIntl(ReactBootstrapInput)>
  </Col>
</Row>
`;

exports[`<ProjectStatsFilters /> should render only categories filter 1`] = `
<Row
  bsClass="row"
  className="stats__filters"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={12}
    xs={12}
  >
    <InjectIntl(ReactBootstrapInput)
      id="stats-filter-categories"
      onChange={[Function]}
      type="select"
    >
      <option
        value=""
      >
        global.select_categories
      </option>
      <option
        key="1"
        value={1}
      />
    </InjectIntl(ReactBootstrapInput)>
  </Col>
</Row>
`;
